--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">ACC Companion</string>
   <string name="title_home">Home</string>
   <string name="title_cars">Autos</string>
   <string name="title_tracks">Strecken</string>
+  <string name="placeholder_user_description_textfield">Deine Beschreibung</string>
 </resources>
