--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">ACC Companion</string>
+    <string name="app_name" translatable="false">ACC Companion</string>
     <string name="title_home">Home</string>
     <string name="title_cars">Cars</string>
     <string name="title_tracks">Tracks</string>
+    <string name="placeholder_user_description_textfield">Your description</string>
 </resources>
