--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="title_cars">Cars</string>
     <string name="title_tracks">Tracks</string>
     <string name="placeholder_user_description_textfield">Your description</string>
+    <string name="totalRaceTime">Total Race Time</string>
+    <string name="averageLapTime">Average Lap Time</string>
+    <string name="totalLaps">Total Laps</string>
+    <string name="fuelPerLap">Fuel Per Lap</string>
+    <string name="fuelTankCapacity">Fuel Tank Capacity</string>
 </resources>
